fix fetching into localstorage bug, added not_found.tsx, modify layout of view/, add latest fetch timestamp

--- a/park-n-go/app/view/index.css
+++ b/park-n-go/app/view/index.css
@@ -8,7 +8,8 @@
     padding: 16px;
     /* margin: 10%; */
     text-align: left;
-    height: auto;
+    /* height: auto; */
+    /* display: inline-block; */
     /* height: 40vh; */
     
     /* display: inline-block; */
